feat: Add initial UI components, Tailwind CSS configuration, and project structure with associated assets.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
         "./*"
       ]
     },
-    "allowImportingTsExtensions": true,
     "noEmit": true
-  }
+  },
+  "include": ["**/*.ts", "**/*.tsx", "types.d.ts"]
 }
