--- a/package.json
+++ b/package.json
@@ -1,30 +1,60 @@
 {
 
   "name": "evoc-labs---future-of-performance-marketing",
+
   "private": true,
+
   "version": "0.0.0",
+
   "type": "module",
+
   "scripts": {
+
     "dev": "vite",
+
     "build": "vite build",
+
     "preview": "vite preview",
+
     "deploy": "gh-pages -d dist"
+
   },
+
   "dependencies": {
+
     "framer-motion": "11.0.8",
+
     "lucide-react": "0.330.0",
+
     "react": "^18.2.0",
+
     "react-dom": "^18.2.0",
+
+    "react-icons": "^5.5.0",
+
     "recharts": "2.12.0"
+
   },
+
   "devDependencies": {
+
     "@types/node": "^22.14.0",
+
     "@vitejs/plugin-react": "^5.0.0",
+
     "autoprefixer": "^10.4.23",
+
     "gh-pages": "^6.3.0",
+
     "postcss": "^8.5.6",
+
     "tailwindcss": "^3.4.17",
+
     "typescript": "~5.8.2",
+
     "vite": "^6.2.0"
+
   }
+
 }
+
