--- a/package.json
+++ b/package.json
@@ -16,11 +16,23 @@
 
     "preview": "vite preview",
 
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+
+    "server": "node server/server.js",
+
+    "server:dev": "nodemon server/server.js"
 
   },
 
   "dependencies": {
+
+    "axios": "^1.13.2",
+
+    "cors": "^2.8.5",
+
+    "dotenv": "^17.2.3",
+
+    "express": "^4.18.2",
 
     "framer-motion": "11.0.8",
 
@@ -34,7 +46,9 @@
 
     "react-router-dom": "^7.12.0",
 
-    "recharts": "2.12.0"
+    "recharts": "2.12.0",
+
+    "resend": "^3.2.0"
 
   },
 
@@ -47,6 +61,8 @@
     "autoprefixer": "^10.4.23",
 
     "gh-pages": "^6.3.0",
+
+    "nodemon": "^3.0.1",
 
     "postcss": "^8.5.6",
 
